--- a/pages/fitosanitarios.html
+++ b/pages/fitosanitarios.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
+    <link rel="icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--/Bootstrap-->
@@ -58,10 +62,10 @@
                 </div>
             </nav>
             <div>
-                <img src="../img/nosotros.jpg" alt="Fitosanitarios Cosembrar" class="section__img" />
+                <img src="../img/fitosanitariosCosembrar.jpg" alt="Fitosanitarios Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1>Fitosanitarios</h1>
+                <h1 class="title--section ms-5">Fitosanitarios</h1>
             </div>
         </header>
         <main id="main">
@@ -76,7 +80,7 @@
                 </div>
 <!-- Call to action -->
                 <div class="text-center me-auto action">
-                    <p class="colorWhite px-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p class="colorWhite px-5">Somos productores, entendemos tus necesidades</p>
                     <div class="action__content">
                         <button type="button" class="pt-3 pb-3 action__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
                     </div>
@@ -110,9 +114,9 @@
             <div class="footer__content footer--contact">
                 <h4>Habla con nosotros</h4>
                 <div class="footer__content__item">
-                    <p class="footer__content__item__text mb-1">info@cosembrar.com.ar</p>
-                    <p class="footer__content__item__text mb-1">02326 45 3574</p>
-                    <a href="https://wa.me/34691675782" target="_blank" rel="noopener noreferrer" class="footer__content__item__link">Whatsapp</a>
+                    <a href="mailto:cosembrar@cosembrar.com.ar" class="footer__content__item__mail">cosembrar@cosembrar.com.ar</a>
+                    <p class="footer__content__item__text mb-0">02326 45 3574</p>
+                    <a href="https://wa.me/34691675782" target="_blank" rel="noopener noreferrer" class="footer__content__item__link"><i class="bi bi-whatsapp brand--whatsapp"></i> Whatsapp</a>
                     <br>
                     <a href="contacto.html" class="footer__content__item__link">Contacto</a>
                     <br>
@@ -123,12 +127,12 @@
                     <a href="https://www.twitter.com/cosembrar" target="_blank" rel="noopener noreferrer" class="footer__content__item__link">Twitter</a>
                 </div>
             </div>
-            <p class="footer__copyright">© 2022 Victoria Antonijevic</p>
+            <p class="footer__copyright">© 2022 Cosembrar Sacifia <a href="http://www.victoriaantonijevic.com/" target="_blank" class="footer__content__item__link--author">| Diseño Web Victoria Antonijevic</a></p>
         </footer>
 <!-- /Footer -->
     </div>
 <!-- Script WOW -->
-    <script src="js/wow.min.js"></script>
+    <script src="../js/wow.min.js"></script>
     <script>new WOW().init();</script>
 <!-- /Script WOW -->
 <!-- Script Bootstrap Bundle with Popper -->
