--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="Victoria Antonijevic | wwww.victoriaantonijevic.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosembrar acopio de cereales y venta de fitosanitarios</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../img/maizCosembrar.ico">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--/Bootstrap-->
@@ -58,10 +62,10 @@
                 </div>
             </nav>
             <div>
-                <img src="../img/nosotros.jpg" alt="Cosembrar" class="section__img" />
+                <img src="../img/nosotrosCosembrar.jpg" alt="Cosembrar" class="section__img" />
             </div>
             <div class="header__title">
-                <h1>Nosotros</h1>
+                <h1 class="title--section ms-5">Nosotros</h1>
             </div>
         </header>
         <main id="main">
@@ -73,6 +77,7 @@
                     Después de poco tiempo, se incorporaron la venta de insumos agropecuarios y fitosanitarios para cumplimentar las necesidades de los productores. <br><br>
                     Buscamos la excelencia de nuestros productos y servicios, priorizando la calidad, asumiendo el compromiso con nuestros clientes de generar vínculos comerciales duraderos, basados en buenos negocios, buen servicio y el valor de la confianza.</p>
                 </div>
+<!--
                 <div class="column mt15 mr5 mb15 ml5">
                     <div class="column__text p-3">
                         <h2 class="color--middle">Sede</h2>
@@ -87,21 +92,7 @@
                         <p class="mt2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.  Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                     </div>
                 </div>
-                <div class="card__contains mt15 mr5 mb15 ml5">
-                    <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Imagen de misión" class="card__contains__img">
-                        <div class="p-3">
-                            <h3>Misión</h3>
-                            <figcaption class="mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</figcaption>
-                        </div>
-                    </figure>
-                    <figure class="card__contains__text">
-                        <img src="../img/img.jpg" alt="Imagen de visión" class="card__contains__img">
-                        <div class="p-3">
-                            <h3>Visión</h3>
-                            <figcaption class="mt-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</figcaption>
-                    </figure>
-                </div>
+-->
 <!-- Call to action -->
                 <div class="text-center action">
                     <h2 class="wow fadeInDown">Seguinos</h2>
@@ -140,9 +131,9 @@
             <div class="footer__content footer--contact">
                 <h4>Habla con nosotros</h4>
                 <div class="footer__content__item">
-                    <p class="footer__content__item__text mb-1">info@cosembrar.com.ar</p>
-                    <p class="footer__content__item__text mb-1">02326 45 3574</p>
-                    <a href="https://wa.me/34691675782" target="_blank" rel="noopener noreferrer" class="footer__content__item__link">Whatsapp</a>
+                    <a href="mailto:cosembrar@cosembrar.com.ar" class="footer__content__item__mail">cosembrar@cosembrar.com.ar</a>
+                    <p class="footer__content__item__text mb-0">02326 45 3574</p>
+                    <a href="https://wa.me/34691675782" target="_blank" rel="noopener noreferrer" class="footer__content__item__link"><i class="bi bi-whatsapp brand--whatsapp"></i> Whatsapp</a>
                     <br>
                     <a href="contacto.html" class="footer__content__item__link">Contacto</a>
                     <br>
@@ -153,12 +144,12 @@
                     <a href="https://www.twitter.com/cosembrar" target="_blank" rel="noopener noreferrer" class="footer__content__item__link">Twitter</a>
                 </div>
             </div>
-            <p class="footer__copyright">© 2022 Victoria Antonijevic</p>
+            <p class="footer__copyright">© 2022 Cosembrar Sacifia <a href="http://www.victoriaantonijevic.com/" target="_blank" class="footer__content__item__link--author">| Diseño Web Victoria Antonijevic</a></p>
         </footer>
 <!-- /Footer -->
     </div>
 <!-- Script WOW -->
-    <script src="js/wow.min.js"></script>
+    <script src="../js/wow.min.js"></script>
     <script>new WOW().init();</script>
 <!-- /Script WOW -->
 <!-- Script Bootstrap Bundle with Popper -->
