--- a/index.html
+++ b/index.html
@@ -64,14 +64,27 @@
                     </div>
                 </div>
             </nav>
-            <div>
-                <img src="img/cosembrar.png" alt="Cosembrar Sacifia" class="header__img" />
-            </div>
-            <div class="header__title">
-                <h1>Acopio de granos<br>Venta de Agroinsumos</h1>
-                <p class="header__subtitle">Más de 20 años junto al productor</p>
-                <button type="button" class="mt-3 pt-3 pb-3 header__btn wow pulse animated" data-wow-delay="300ms" data-wow-iteration="infinite" data-wow-duration="2s">Contactanos</button>
-            </div>
+                <video autoplay playsinline muted loop preload poster="img/2160p.png">
+                    <!-- <source src="img/2160p.webm" /> -->
+                    <source src="img/2160p.mp4" />
+                </video>
+                <div class="header__title">
+                    <h1 class="colorWhite">Acopio de granos<br>Venta de Agroinsumos</h1>
+                    <p class="header__subtitle colorWhite">Más de 20 años junto al productor</p>
+                    <a href="pages/contacto.html" class="action__btn">Contactanos</a>
+                </div>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285 80" preserveAspectRatio="xMidYMid slice">
+                    <defs>
+                        <mask id="mask" x="0" y="0" width="100%" height="100%" >
+                        <rect x="0" y="0" width="100%" height="100%" />
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 1280 660" style="enable-background:new 0 0 1280 660;" xml:space="preserve">
+                        <path d="M520.59,555.88L0,660V0h1280v660L759.41,555.88C680.58,540.12,599.42,540.12,520.59,555.88z"/>
+                        </svg>
+                        </mask>
+                    </defs>
+                    <rect x="0" y="0" width="100%" height="100%" />
+                </svg>
         </header>
         <main id="main">
             <section>
